--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "solita",
+  "name": "Circular Economy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "ethers": "^5.6.2",
+    "ethers": "^5.6.4",
     "local-storage": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
