--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "ethers": "^5.6.4",
     "local-storage": "^2.0.0",
     "react": "^18.0.0",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
+    "react-hook-form-resolvers": "^0.0.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "semantic-ui-react": "^2.1.2",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
   },
