--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scroll": "^1.8.6",
     "semantic-ui-react": "^2.1.2",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
