--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "Distributed Circularity",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "dce_logo.jpeg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/jpeg"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "dce_logo.jpeg",
+      "type": "image/jpeg",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "dce_logo.jpeg",
+      "type": "image/jpeg",
       "sizes": "512x512"
     }
   ],
